--- a/velowrench/App.axaml
+++ b/velowrench/App.axaml
@@ -1,15 +1,16 @@
-<Application xmlns="https://github.com/avaloniaui"
+<Application x:Class="velowrench.App"
+             xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:velowrench"
-             x:Class="velowrench.App"
+             xmlns:semi="https://irihi.tech/semi"
              RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+    <!--  "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options.  -->
 
     <Application.DataTemplates>
-        <local:ViewLocator/>
+        <local:ViewLocator />
     </Application.DataTemplates>
 
     <Application.Styles>
-        <FluentTheme />
+        <semi:SemiTheme Locale="en-US" />
     </Application.Styles>
 </Application>
