--- a/velowrench/Views/MainWindow.axaml
+++ b/velowrench/Views/MainWindow.axaml
@@ -1,9 +1,26 @@
 <Window x:Class="velowrench.Views.MainWindow"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:app="clr-namespace:velowrench"
+        xmlns:rxui="http://reactiveui.net"
         xmlns:views="clr-namespace:velowrench.Views"
         xmlns:vm="using:velowrench.ViewModels"
         Title="velowrench"
+        Width="360"
+        Height="640"
+        x:DataType="vm:MainWindowViewModel"
+        Design.Height="640"
+        Design.Width="360"
         Icon="/Assets/avalonia-logo.ico">
-    <views:HomeView />
+    <Design.DataContext>
+        <vm:MainWindowViewModel />
+    </Design.DataContext>
+
+    <rxui:RoutedViewHost Grid.Row="1" Grid.Column="0"
+                         Router="{Binding Router}">
+        <rxui:RoutedViewHost.ViewLocator>
+            <app:AppViewLocator />
+        </rxui:RoutedViewHost.ViewLocator>
+    </rxui:RoutedViewHost>
+
 </Window>
