--- a/velowrench/App.axaml
+++ b/velowrench/App.axaml
@@ -2,6 +2,7 @@
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:velowrench"
+             xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              xmlns:semi="https://irihi.tech/semi"
              RequestedThemeVariant="Default">
     <!--  "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options.  -->
@@ -12,5 +13,6 @@
 
     <Application.Styles>
         <semi:SemiTheme Locale="en-US" />
+        <materialIcons:MaterialIconStyles />
     </Application.Styles>
 </Application>
