--- a/velowrench/Views/Tools/ChainLengthCalculatorView.axaml
+++ b/velowrench/Views/Tools/ChainLengthCalculatorView.axaml
@@ -1,16 +1,14 @@
-<UserControl x:Class="velowrench.Views.ChainLengthCalculatorView"
+<UserControl x:Class="velowrench.Views.Tools.ChainLengthCalculatorView"
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="clr-namespace:velowrench.Views.Controls"
              xmlns:res="clr-namespace:velowrench.Resources"
-             xmlns:views="clr-namespace:velowrench.Views"
              xmlns:vm="clr-namespace:velowrench.ViewModels"
-             x:DataType="vm:HomeViewModel"
-             Design.Height="640"
-             Design.Width="360">
+             x:DataType="vm:Tools.ChainLengthCalculatorViewModel">
 
     <Grid ColumnDefinitions="*" RowDefinitions="Auto, Auto, Auto">
 
-        <views:RoutableViewHeaderControl Grid.Row="0" Grid.Column="0" />
+        <controls:RoutableViewHeaderControl Grid.Row="0" Grid.Column="0" />
 
         <TextBlock Grid.Row="1" Grid.Column="0"
                    Margin="100,50"
