--- a/velowrench.UI/Views/MainView.axaml
+++ b/velowrench.UI/Views/MainView.axaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="velowrench.UI.Views.MainWindow"
+<UserControl x:Class="velowrench.UI.Views.MainView"
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:velowrench.UI"
@@ -7,21 +7,24 @@
              xmlns:vm="using:velowrench.Core.ViewModels"
              Width="360"
              Height="640"
-             x:DataType="vm:MainWindowViewModel"
+             x:DataType="vm:MainViewModel"
              Design.Height="640"
              Design.Width="360">
 
     <Grid ColumnDefinitions="*" RowDefinitions="40, *">
 
 
-        <Button Grid.Row="0" Grid.Column="0"  HorizontalAlignment="Left" VerticalAlignment="Top"
+        <Button Grid.Row="0" Grid.Column="0"
+                HorizontalAlignment="Left" VerticalAlignment="Top"
                 Command="{Binding NavigateBackCommand}"
                 Theme="{DynamicResource BorderlessButton}">
             <materialIcons:MaterialIcon Width="25" Height="25"
                                         Foreground="Black" Kind="ArrowLeft" />
         </Button>
-		
-        <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Text="{Binding CurrentContent.Name}" />
+
+        <TextBlock Grid.Row="0" Grid.Column="0"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                   Text="{Binding CurrentContent.Name}" />
 
         <ContentControl Grid.Row="1" Grid.Column="0"
                         Content="{Binding CurrentContent}">
@@ -29,7 +32,7 @@
                 <local:ViewLocator />
             </ContentControl.DataTemplates>
         </ContentControl>
-		
+
     </Grid>
 
 </UserControl>
