--- a/velowrench.UI/Views/MainView.axaml
+++ b/velowrench.UI/Views/MainView.axaml
@@ -1,8 +1,8 @@
 <UserControl x:Class="velowrench.UI.Views.MainView"
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:velowrench.UI"
              xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
+             xmlns:services="clr-namespace:velowrench.UI.Services"
              xmlns:views="clr-namespace:velowrench.UI.Views"
              xmlns:vm="using:velowrench.Core.ViewModels"
              Width="360"
@@ -29,7 +29,7 @@
         <ContentControl Grid.Row="1" Grid.Column="0"
                         Content="{Binding CurrentContent}">
             <ContentControl.DataTemplates>
-                <local:ViewLocator />
+                <services:ViewLocator />
             </ContentControl.DataTemplates>
         </ContentControl>
 
