--- a/velowrench.UI/Views/MainView.axaml
+++ b/velowrench.UI/Views/MainView.axaml
@@ -5,25 +5,28 @@
              xmlns:services="clr-namespace:velowrench.UI.Services"
              xmlns:views="clr-namespace:velowrench.UI.Views"
              xmlns:vm="using:velowrench.Core.ViewModels"
-             Width="360"
-             Height="640"
              x:DataType="vm:MainViewModel"
+             Background="{DynamicResource CustomMainBackground}"
              Design.Height="640"
              Design.Width="360">
 
-    <Grid ColumnDefinitions="*" RowDefinitions="40, *">
-
+    <Grid Margin="8,8"
+          ColumnDefinitions="*" RowDefinitions="40, *">
 
         <Button Grid.Row="0" Grid.Column="0"
                 HorizontalAlignment="Left" VerticalAlignment="Top"
-                Command="{Binding NavigateBackCommand}"
+                Command="{Binding NavigateBackCommand, UpdateSourceTrigger=PropertyChanged}"
+				IsVisible="{Binding CanNavigateBack}"
                 Theme="{DynamicResource BorderlessButton}">
             <materialIcons:MaterialIcon Width="25" Height="25"
-                                        Foreground="Black" Kind="ArrowLeft" />
+                                        HorizontalAlignment="Center"
+                                        Foreground="{DynamicResource SemiColorText0}"
+                                        Kind="ArrowLeft" />
         </Button>
 
         <TextBlock Grid.Row="0" Grid.Column="0"
                    HorizontalAlignment="Center" VerticalAlignment="Center"
+                   FontSize="18" FontWeight="SemiBold"
                    Text="{Binding CurrentContent.Name}" />
 
         <ContentControl Grid.Row="1" Grid.Column="0"
