--- a/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
@@ -1,6 +1,7 @@
 <UserControl x:Class="velowrench.UI.Views.Tools.ChainLengthCalculatorView"
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="using:velowrench.UI.Controls"
              xmlns:res="clr-namespace:velowrench.UI.Resources"
              xmlns:vm="using:velowrench.Core.ViewModels"
              x:DataType="vm:Tools.ChainLengthCalculatorViewModel"
@@ -9,60 +10,62 @@
 
     <StackPanel Orientation="Vertical">
 
+        <!--  Inputs  -->
         <Grid Margin="20,10"
-              ColumnDefinitions="75*,3*,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+              ColumnDefinitions="75*,3*,Auto" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
-                       Margin="0,10,0,3"
-                       Text="Chain stay length" />
-            <NumericUpDown Grid.Row="1" Grid.Column="0"
-                     Value="{Binding ChainStayLength, Delay=600}" />
-            <ComboBox Grid.Row="1" Grid.Column="2"
-                      HorizontalAlignment="Stretch"
-                      PlaceholderText="cm" />
+            <!--  Chain Stay Length  -->
+            <controls:LengthUpDown Title="Chain stay length"
+                                   Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
+                                   Increment="1" Maximum="3000" Minimum="0.1"
+                                   Value="{Binding ChainStayLength, Delay=600}" />
 
-            <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
+            <!--  Largest front chainring  -->
+            <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                        Margin="0,10,0,3"
                        Text="Largest front chainring" />
-			<NumericUpDown Grid.Row="3" Grid.Column="0" Minimum="1" Increment="1"
-                     Value="{Binding LargestChainring, Delay=600}" />
-            <ComboBox Grid.Row="3" Grid.Column="2"
+            <NumericUpDown Grid.Row="2" Grid.Column="0"
+                           Increment="1" Maximum="100" Minimum="1"
+                           Value="{Binding TeethLargestChainring, Delay=600}" />
+            <ComboBox Grid.Row="2" Grid.Column="2"
                       HorizontalAlignment="Stretch"
                       IsEnabled="False" PlaceholderText="teeth" />
 
-            <TextBlock Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
+            <!--  Largest rear sprocket  -->
+            <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
                        Margin="0,10,0,3"
                        Text="Largest rear sprocket" />
-			<NumericUpDown Grid.Row="5" Grid.Column="0" Minimum="1" Increment="1" FormatString="0"
-                     Value="{Binding LargestSprocket, Delay=600}" />
-            <ComboBox Grid.Row="5" Grid.Column="2"
+            <NumericUpDown Grid.Row="4" Grid.Column="0"
+                           FormatString="0" Increment="1" IsReadOnly="True" Maximum="70"
+                           Minimum="1"
+                           Value="{Binding TeethLargestSprocket, Delay=600}" />
+            <ComboBox Grid.Row="4" Grid.Column="2"
                       HorizontalAlignment="Stretch"
                       IsEnabled="False" PlaceholderText="teeth" />
 
         </Grid>
 
+        <!--  Results  -->
         <Grid RowDefinitions="Auto, Auto, Auto">
             <TextBlock Grid.Row="0"
                        HorizontalAlignment="Center"
                        Text="Recommended chain length" />
 
+            <!--  Recomended Chain Length in links  -->
             <StackPanel Grid.Row="1"
                         HorizontalAlignment="Center"
                         Orientation="Horizontal">
                 <TextBlock Margin="0,0,5,0"
-                           FontSize="20" Foreground="Green"
-                           Text="{Binding ChainLengthInLinks}" />
-                <TextBlock FontSize="20" Foreground="Green" Text="links" />
+                           FontSize="20"
+                           Text="{Binding RecomendedChainLinks}" />
+                <TextBlock FontSize="20" Text="links" />
             </StackPanel>
 
-            <StackPanel Grid.Row="2"
-                        HorizontalAlignment="Center"
-                        Orientation="Horizontal">
-                <TextBlock Margin="0,0,5,0"
-                           FontSize="20" Foreground="Green"
-                           Text="{Binding ChainLengthInInch}" />
-                <TextBlock FontSize="20" Foreground="Green" Text="cm" />
-            </StackPanel>
+            <!--  Recomended Chain Length in cm  -->
+            <controls:LengthTextBlock Grid.Row="2"
+                                      HorizontalAlignment="Center"
+                                      Format="0.00"
+                                      Value="{Binding RecomendedChainLength, Delay=600}" />
         </Grid>
 
     </StackPanel>
