--- a/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
@@ -2,11 +2,18 @@
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:controls="using:velowrench.UI.Controls"
+             xmlns:converters="using:velowrench.UI.Converters"
+             xmlns:enums="using:velowrench.Utils.Enums"
+             xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              xmlns:res="clr-namespace:velowrench.UI.Resources"
              xmlns:vm="using:velowrench.Core.ViewModels"
              x:DataType="vm:Tools.ChainLengthCalculatorViewModel"
              Design.Height="640"
              Design.Width="360">
+
+    <UserControl.Resources>
+        <converters:EnumToStringConverter x:Key="EnumToStringConverter" />
+    </UserControl.Resources>
 
     <StackPanel Orientation="Vertical">
 
@@ -18,7 +25,7 @@
             <controls:LengthUpDown Title="Chain stay length"
                                    Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
                                    Increment="1" Maximum="3000" Minimum="0.1"
-                                   Value="{Binding ChainStayLength, Delay=600}" />
+                                   Value="{Binding ChainStayLength}" />
 
             <!--  Largest front chainring  -->
             <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
@@ -36,8 +43,7 @@
                        Margin="0,10,0,3"
                        Text="Largest rear sprocket" />
             <NumericUpDown Grid.Row="4" Grid.Column="0"
-                           FormatString="0" Increment="1" IsReadOnly="True" Maximum="70"
-                           Minimum="1"
+                           FormatString="0" Increment="1" Maximum="70" Minimum="1"
                            Value="{Binding TeethLargestSprocket, Delay=600}" />
             <ComboBox Grid.Row="4" Grid.Column="2"
                       HorizontalAlignment="Stretch"
@@ -45,28 +51,161 @@
 
         </Grid>
 
-        <!--  Results  -->
-        <Grid RowDefinitions="Auto, Auto, Auto">
-            <TextBlock Grid.Row="0"
-                       HorizontalAlignment="Center"
-                       Text="Recommended chain length" />
+        <!--  Calculation Status  -->
+        <ContentControl Margin="20,10" HorizontalAlignment="Stretch"
+                        Content="{Binding CalculState}">
+            <ContentControl.DataTemplates>
+                <DataTemplate DataType="enums:ECalculState">
+                    <ContentControl Content="{Binding}">
+                        <ContentControl.Styles>
 
-            <!--  Recomended Chain Length in links  -->
-            <StackPanel Grid.Row="1"
-                        HorizontalAlignment="Center"
-                        Orientation="Horizontal">
-                <TextBlock Margin="0,0,5,0"
-                           FontSize="20"
-                           Text="{Binding RecomendedChainLinks}" />
-                <TextBlock FontSize="20" Text="links" />
-            </StackPanel>
+                            <Style Selector="ContentControl[Content=NotStarted]">
+                                <Setter Property="ContentTemplate">
+                                    <Setter.Value>
+                                        <DataTemplate>
+                                            <StackPanel Grid.Column="0"
+                                                        Margin="0,20,0,25"
+                                                        Orientation="Vertical">
+                                                <materialIcons:MaterialIcon Width="25" Height="25"
+                                                                            HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                                            Foreground="{DynamicResource SemiColorTertiary}"
+                                                                            Kind="AccountQuestionOutline" />
+                                                <TextBlock Grid.Row="1"
+                                                           HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                           Text="Please enter the values" />
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
 
-            <!--  Recomended Chain Length in cm  -->
-            <controls:LengthTextBlock Grid.Row="2"
-                                      HorizontalAlignment="Center"
-                                      Format="0.00"
-                                      Value="{Binding RecomendedChainLength, Delay=600}" />
-        </Grid>
+                            <Style Selector="ContentControl[Content=InProgress]">
+                                <Setter Property="ContentTemplate">
+                                    <Setter.Value>
+                                        <DataTemplate>
+                                            <StackPanel Grid.Column="0"
+                                                        Margin="0,20,0,25"
+                                                        Orientation="Vertical">
+                                                <materialIcons:MaterialIcon Width="25" Height="25"
+                                                                            HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                                            Foreground="{DynamicResource SemiColorInformation}"
+                                                                            Kind="TimerSand" />
+                                                <TextBlock Grid.Row="1"
+                                                           HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                           Text="Calculation in progress.." />
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+
+                            <Style Selector="ContentControl[Content=Computed]">
+                                <Setter Property="ContentTemplate">
+                                    <Setter.Value>
+                                        <DataTemplate>
+                                            <Grid RowDefinitions="Auto, Auto, Auto, Auto">
+                                                <StackPanel Grid.Column="0"
+                                                            Margin="0,20,0,25"
+                                                            Orientation="Vertical">
+                                                    <materialIcons:MaterialIcon Width="25" Height="25"
+                                                                                HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                                                Foreground="{DynamicResource SemiColorSuccess}"
+                                                                                Kind="CheckBold" />
+                                                    <TextBlock Grid.Row="1"
+                                                               HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                               Text="Calculated" />
+                                                </StackPanel>
+
+                                                <TextBlock Grid.Row="1"
+                                                           Margin="16,16,16,8" HorizontalAlignment="Left" VerticalAlignment="Center"
+                                                           FontSize="12" FontWeight="SemiBold"
+                                                           Foreground="{DynamicResource SemiColorTertiary}"
+                                                           Text="Recommended value" />
+                                                <Border Grid.Row="2"
+                                                        HorizontalAlignment="Stretch"
+                                                        Background="{DynamicResource SemiColorTertiaryLight}"
+                                                        CornerRadius="7">
+                                                    <Grid Margin="10,10"
+                                                          ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
+                                                        <TextBlock Grid.Row="0" Grid.Column="0"
+                                                                   Margin="0,0,10,0" VerticalAlignment="Center"
+                                                                   FontWeight="DemiBold"
+                                                                   Foreground="{DynamicResource SemiColorText0}"
+                                                                   Text="Chain length:" />
+                                                        <controls:LengthTextBlock Grid.Row="0" Grid.Column="1"
+                                                                                  HorizontalAlignment="Left" VerticalAlignment="Center"
+                                                                                  FontWeight="Bold"
+                                                                                  Foreground="{DynamicResource SemiColorSuccess}"
+                                                                                  Format="0.00"
+                                                                                  Value="{Binding $parent[UserControl].DataContext.RecomendedChainLength}" />
+                                                        <TextBlock Grid.Row="1" Grid.Column="0"
+                                                                   Margin="0,10,10,0"
+                                                                   FontWeight="DemiBold"
+                                                                   Foreground="{DynamicResource SemiColorText0}"
+                                                                   Text="Number of links:" />
+                                                        <TextBlock Grid.Row="1" Grid.Column="1"
+                                                                   Margin="0,10,0,0" HorizontalAlignment="Left"
+                                                                   FontWeight="Bold"
+                                                                   Foreground="{DynamicResource SemiColorSuccess}"
+                                                                   Text="{Binding $parent[UserControl].DataContext.RecomendedChainLinks}" />
+                                                    </Grid>
+                                                </Border>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+
+                            <Style Selector="ContentControl[Content=Failed]">
+                                <Setter Property="ContentTemplate">
+                                    <Setter.Value>
+                                        <DataTemplate>
+                                            <Grid RowDefinitions="Auto, Auto, Auto, Auto">
+                                                <StackPanel Grid.Column="0"
+                                                            Margin="0,20,0,25"
+                                                            Orientation="Vertical">
+                                                    <materialIcons:MaterialIcon Width="25" Height="25"
+                                                                                HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                                                Foreground="{DynamicResource SemiColorDanger}"
+                                                                                Kind="ErrorOutline" />
+                                                    <TextBlock Grid.Row="1"
+                                                               HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                               Text="Calculation failed" />
+                                                </StackPanel>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+
+                            <Style Selector="ContentControl[Content=Unknown]">
+                                <Setter Property="ContentTemplate">
+                                    <Setter.Value>
+                                        <DataTemplate>
+                                            <Grid RowDefinitions="Auto, Auto, Auto, Auto">
+                                                <StackPanel Grid.Column="0"
+                                                            Margin="0,20,0,25"
+                                                            Orientation="Vertical">
+                                                    <materialIcons:MaterialIcon Width="25" Height="25"
+                                                                                HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                                                Foreground="{DynamicResource SemiColorWarning}"
+                                                                                Kind="CloseCircleOutline" />
+                                                    <TextBlock Grid.Row="1"
+                                                               HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                               Text="Something wrong happened." />
+                                                </StackPanel>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+
+                        </ContentControl.Styles>
+                    </ContentControl>
+                </DataTemplate>
+            </ContentControl.DataTemplates>
+        </ContentControl>
 
     </StackPanel>
+
 </UserControl>
