--- a/velowrench.UI/Views/MainView.axaml
+++ b/velowrench.UI/Views/MainView.axaml
@@ -16,7 +16,7 @@
         <Button Grid.Row="0" Grid.Column="0"
                 HorizontalAlignment="Left" VerticalAlignment="Top"
                 Command="{Binding NavigateBackCommand, UpdateSourceTrigger=PropertyChanged}"
-				IsVisible="{Binding CanNavigateBack}"
+                IsVisible="{Binding CanNavigateBack}"
                 Theme="{DynamicResource BorderlessButton}">
             <materialIcons:MaterialIcon Width="25" Height="25"
                                         HorizontalAlignment="Center"
@@ -28,6 +28,16 @@
                    HorizontalAlignment="Center" VerticalAlignment="Center"
                    FontSize="18" FontWeight="SemiBold"
                    Text="{Binding CurrentContent.Name}" />
+
+        <Button Grid.Row="0"
+                HorizontalAlignment="Right" VerticalAlignment="Top"
+                Command="{Binding ShowHelpPageCommand, UpdateSourceTrigger=PropertyChanged}"
+                IsVisible="{Binding CanShowHelpPage}"
+                Theme="{DynamicResource BorderlessButton}">
+            <materialIcons:MaterialIcon Width="25" Height="25"
+                                        Foreground="{DynamicResource SemiColorText0}"
+                                        Kind="InfoOutline" />
+        </Button>
 
         <ContentControl Grid.Row="1" Grid.Column="0"
                         Content="{Binding CurrentContent}">
