--- a/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
@@ -24,17 +24,18 @@
             <!--  Chain Stay Length  -->
             <controls:LengthUpDown Title="Chain stay length"
                                    Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
-                                   Increment="1" Maximum="3000" Minimum="0.1"
-                                   Value="{Binding ChainStayLength}" />
+                                   ConvertibleDouble="{Binding ChainStayLength}"
+                                   Increment="1" Maximum="3000" Minimum="0.1" />
 
             <!--  Largest front chainring  -->
             <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                        Margin="0,10,0,3"
                        Text="Largest front chainring" />
             <NumericUpDown Grid.Row="2" Grid.Column="0"
-                           Increment="1" Maximum="100" Minimum="1"
+                           Increment="1" Maximum="100" Minimum="1" ShowButtonSpinner="False"
                            Value="{Binding TeethLargestChainring, Delay=600}" />
             <ComboBox Grid.Row="2" Grid.Column="2"
+                      Width="100"
                       HorizontalAlignment="Stretch"
                       IsEnabled="False" PlaceholderText="teeth" />
 
@@ -44,8 +45,10 @@
                        Text="Largest rear sprocket" />
             <NumericUpDown Grid.Row="4" Grid.Column="0"
                            FormatString="0" Increment="1" Maximum="70" Minimum="1"
+                           ShowButtonSpinner="False"
                            Value="{Binding TeethLargestSprocket, Delay=600}" />
             <ComboBox Grid.Row="4" Grid.Column="2"
+                      Width="100"
                       HorizontalAlignment="Stretch"
                       IsEnabled="False" PlaceholderText="teeth" />
 
@@ -53,7 +56,7 @@
 
         <!--  Calculation Status  -->
         <ContentControl Margin="20,10" HorizontalAlignment="Stretch"
-                        Content="{Binding CalculState}">
+                        Content="{Binding CurrentState}">
             <ContentControl.DataTemplates>
                 <DataTemplate DataType="enums:ECalculState">
                     <ContentControl Content="{Binding}">
@@ -137,17 +140,17 @@
                                                                                   FontWeight="Bold"
                                                                                   Foreground="{DynamicResource SemiColorSuccess}"
                                                                                   Format="0.00"
-                                                                                  Value="{Binding $parent[UserControl].DataContext.RecomendedChainLength}" />
+                                                                                  Value="{Binding $parent[UserControl].DataContext.RecommendedChainLength}" />
                                                         <TextBlock Grid.Row="1" Grid.Column="0"
                                                                    Margin="0,10,10,0"
                                                                    FontWeight="DemiBold"
                                                                    Foreground="{DynamicResource SemiColorText0}"
-                                                                   Text="Number of links:" />
+                                                                   Text="Chain links:" />
                                                         <TextBlock Grid.Row="1" Grid.Column="1"
                                                                    Margin="0,10,0,0" HorizontalAlignment="Left"
                                                                    FontWeight="Bold"
                                                                    Foreground="{DynamicResource SemiColorSuccess}"
-                                                                   Text="{Binding $parent[UserControl].DataContext.RecomendedChainLinks}" />
+                                                                   Text="{Binding $parent[UserControl].DataContext.RecommendedChainLinks}" />
                                                     </Grid>
                                                 </Border>
                                             </Grid>
