--- a/velowrench.UI/Views/Help/ChainLengthCalculatorHelpView.axaml
+++ b/velowrench.UI/Views/Help/ChainLengthCalculatorHelpView.axaml
@@ -2,6 +2,7 @@
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:math="clr-namespace:AvaloniaMath.Controls;assembly=AvaloniaMath"
+             xmlns:res="clr-namespace:velowrench.UI.Resources"
              xmlns:vm="using:velowrench.Core.ViewModels"
              x:DataType="vm:Help.ChainLengthCalculatorHelpViewModel"
              Design.Height="840"
@@ -33,54 +34,56 @@
         </Style>
     </UserControl.Styles>
 
-    <Grid RowDefinitions="Auto, Auto, Auto ,Auto, Auto, Auto,Auto, Auto, Auto, Auto, Auto, Auto ,Auto, Auto, Auto,Auto, Auto, Auto">
+    <Grid RowDefinitions="Auto, Auto, Auto ,Auto, Auto, Auto">
 
         <!--  Inputs  -->
         <TextBlock Grid.Row="0"
-                   Classes="GroupHeader" Text="Inputs" />
+                   Classes="GroupHeader"
+                   Text="{x:Static res:Languages.Inputs}" />
 
         <Border Grid.Row="1" Classes="Group">
             <StackPanel>
-                <TextBlock Classes="Header2" Text="Chain stay length (C)" />
-                <TextBlock Classes="Content" Text="The distance between the center of the bottom bracket (pedal axle) and the center of the rear wheel axle. It is usually measured along the chain line." />
+                <TextBlock Classes="Header2" Text="{x:Static res:Languages.HelpChainStayLengthHeader}" />
+                <TextBlock Classes="Content" Text="{x:Static res:Languages.HelpChainStayLength}" />
 
-                <TextBlock Classes="Header2" Text="Largest front chainring (F)" />
-                <TextBlock Classes="Content" Text="The number of teeth on your bike's largest front chainring." />
+                <TextBlock Classes="Header2" Text="{x:Static res:Languages.HelpFrontChainringHeader}" />
+                <TextBlock Classes="Content" Text="{x:Static res:Languages.HelpFrontChainring}" />
 
-                <TextBlock Classes="Header2" Text="Largest rear sprocket (R)" />
-                <TextBlock Classes="Content" Text="The number of teeth on the largest cog of your rear cassette/freewheel." />
+                <TextBlock Classes="Header2" Text="{x:Static res:Languages.HelpLargestRearSprocketHeader}" />
+                <TextBlock Classes="Content" Text="{x:Static res:Languages.HelpLargestRearSprocket}" />
             </StackPanel>
         </Border>
 
         <!--  Calcul  -->
         <TextBlock Grid.Row="2"
-                   Classes="GroupHeader" Text="Calculations" />
+                   Classes="GroupHeader"
+                   Text="{x:Static res:Languages.Calculations}" />
 
         <Border Grid.Row="3" Classes="Group">
             <StackPanel>
-                <TextBlock Classes="Content" Text="This tool uses two common methods to estimate the correct bicycle chain length:" />
+                <TextBlock Classes="Content" Text="{x:Static res:Languages.HelpChainLengthCalculationHeader}" />
 
-                <TextBlock Classes="Header2" Text="Simple formula" />
+                <TextBlock Classes="Header2" Text="{x:Static res:Languages.SimpleFormula}" />
                 <math:FormulaBlock Grid.Row="10"
                                    Margin="0,5,0,5" HorizontalAlignment="Center"
                                    Formula="{Binding SimpleEquationLaTeX}"
                                    Scale="16" />
-                <TextBlock Classes="Content" Text="A quick approximation based on chainstay length and the sizes of your largest front chainring and largest rear sprocket. Best suited for standard bikes and quick calculations." />
+                <TextBlock Classes="Content" Text="{x:Static res:Languages.SimpleFormulaExplanation}" />
 
-                <TextBlock Classes="Header2" Text="Rigorous formula" />
+                <TextBlock Classes="Header2" Text="{x:Static res:Languages.RigorousFormula}" />
                 <math:FormulaBlock Margin="0,5,0,5" HorizontalAlignment="Center" VerticalAlignment="Center"
                                    Formula="{Binding RigorousEquationLaTeX}"
                                    Scale="14" />
-                <TextBlock Classes="Content" Text="A more accurate method that uses Pythagoras' theorem to take into account the actual path of the chain around the gears. This is more accurate for shorter chainstays or bikes with unusual gear sizes." />
+                <TextBlock Classes="Content" Text="{x:Static res:Languages.RigorousFormulaExplanation}" />
             </StackPanel>
         </Border>
 
         <!--  Results  -->
         <TextBlock Grid.Row="4"
-                   Classes="GroupHeader" Text="Results" />
+                   Classes="GroupHeader" Text="{x:Static res:Languages.Results}" />
         <Border Grid.Row="5" Classes="Group">
             <StackPanel>
-                <TextBlock Classes="Content" Text="Both formulas give the recommended chain length, which can then be converted into the number of links required." />
+                <TextBlock Classes="Content" Text="{x:Static res:Languages.ResultChainLengthCalculExplaination}" />
             </StackPanel>
         </Border>
 
