start adding gear ratio views + calculation

--- a/velowrench.UI/App.axaml
+++ b/velowrench.UI/App.axaml
@@ -8,6 +8,7 @@
 
     <Application.Styles>
         <semi:SemiTheme Locale="en-US" />
+		<semi:DataGridSemiTheme />
         <materialIcons:MaterialIconStyles />
     </Application.Styles>
 
